# libsandbox

./: CMakeLists.txt  README.md
files/pkgconfig/: sandbox.pc.in
include/public/: sandbox.h
src/: paths.h.in  sandbox.cpp
src/test/: CMakeLists.txt  testsandbox.cpp
